--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <meta property="twitter:title" content="Finger Beat Ultimate - Demo | VOID Studio">
     <meta property="twitter:description" content="Professional HTML5 rhythm game template with procedural audio generation. Try the demo now!">
     <meta property="twitter:image" content="https://moutail.github.io/finger-beat-demo/assets/og-image.png">
-
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
     <title>Finger Beat Ultimate - Demo | VOID Studio</title>
     <link rel="icon" type="image/svg+xml" href="assets/void-logo.svg">
     
