--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
     <title>Finger Beat Ultimate - Professional Rhythm Game Template | VOID Studio</title>
     <link rel="icon" type="image/svg+xml" href="assets/void-logo.svg">
     
-    <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7DL8CMXJ32"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX');
+
+        gtag('config', 'G-7DL8CMXJ32');
     </script>
 
     <!-- Facebook Pixel -->
